--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -40,9 +40,10 @@
         android:scrollbars="vertical"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="420dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header" />
+        app:layout_constraintTop_toBottomOf="@id/header"
+        />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/header"
@@ -86,8 +87,7 @@
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="70dp"
-            android:layout_marginRight="70dp"
+            android:layout_marginRight="90dp"
             android:text="טקסט"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -102,18 +102,9 @@
             android:text="תמונה"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/text"
-            app:layout_constraintEnd_toStartOf="@id/text" />
+            app:layout_constraintEnd_toStartOf="@id/text"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-        <TextView
-            android:id="@+id/location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="60dp"
-            android:layout_marginRight="60dp"
-            android:text="מיקום"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@id/image"
-            app:layout_constraintEnd_toStartOf="@id/image" />
 
         <ImageView
             android:id="@+id/iconImg"
