--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <View
+        android:id="@+id/divider1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimary"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/comNickname"
@@ -11,7 +21,10 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="6dp"
+        app:layout_constraintTop_toTopOf="@id/divider1"/>
 
     <TextView
         android:id="@+id/comDate"
@@ -39,6 +52,6 @@
         app:layout_constraintEnd_toEndOf="@id/comNickname"
         app:layout_constraintTop_toBottomOf="@id/comNickname"
         android:textSize="18sp"
-        android:paddingBottom="20dp"/>
+        android:paddingBottom="8dp"/>
 
 </android.support.constraint.ConstraintLayout>
