--- a/app/src/main/res/layout/item_post_image.xml
+++ b/app/src/main/res/layout/item_post_image.xml
@@ -52,18 +52,74 @@
         android:id="@+id/imagePost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:srcCompat="@drawable/rsz_contact_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageLogo" />
+        app:layout_constraintTop_toBottomOf="@id/textPost"
+         />
 
     <TextView
         android:id="@+id/textPost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottomtoTopOf="@id/imageLogo" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@id/imageLogo"
+        app:layout_constraintTop_toBottomOf="@id/imageLogo"
+        android:textSize="18sp"
+        android:layout_marginBottom="4dp"/>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimary"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toTopOf="@id/layout"/>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imagePost"
+        android:paddingTop="8dp">
+
+        <ImageView
+            android:id="@+id/likeImg"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/like"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="80dp"
+            android:paddingBottom="10dp"
+            />
+
+        <TextView
+            android:id="@+id/likesNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/likeImg"
+            app:layout_constraintBottom_toBottomOf="@id/likeImg"
+            android:layout_marginRight="8dp"
+            android:paddingBottom="10dp"
+
+            />
+
+        <TextView
+            android:id="@+id/commentsNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="80dp"
+            app:layout_constraintBottom_toBottomOf="@id/likeImg"
+            android:paddingBottom="10dp"
+            />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/commentLayout"
+        app:layout_constraintTop_toBottomOf="@id/layout" />
 </android.support.constraint.ConstraintLayout>
