--- a/app/src/main/res/layout/item_post_text.xml
+++ b/app/src/main/res/layout/item_post_text.xml
@@ -55,13 +55,13 @@
         app:layout_constraintEnd_toEndOf="@id/imageLogo"
         app:layout_constraintTop_toBottomOf="@id/imageLogo"
         android:textSize="18sp"
-        android:paddingBottom="20dp"/>
+        />
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentTop="true"
-        android:background="@color/colorPrimary"
+        android:background="@color/gold_med"
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toTopOf="@id/layout"/>
 
@@ -69,7 +69,6 @@
         android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text"
         android:paddingTop="8dp">
 
@@ -110,7 +109,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/commentLayout"
-        app:layout_constraintTop_toBottomOf="@id/layout" />
+        app:layout_constraintTop_toBottomOf="@id/layout"
+        android:scrollbars="vertical"/>
 
+    <Button
+        android:id="@+id/addComBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginTop="6dp"
+        android:background="@drawable/round_pink_button"
+        android:text="הוסף תגובה"
+        android:textColor="#ffffff"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/commentLayout" />
 
 </android.support.constraint.ConstraintLayout>
