--- a/app/src/main/res/layout/item_post_image.xml
+++ b/app/src/main/res/layout/item_post_image.xml
@@ -58,6 +58,17 @@
          />
 
     <TextView
+        android:id="@+id/postID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintEnd_toStartOf="@id/date"
+        app:layout_constraintBottom_toBottomOf="@id/date"
+        android:visibility="invisible"
+        />
+
+    <TextView
         android:id="@+id/textPost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
