--- a/app/src/main/res/layout/item_post_image.xml
+++ b/app/src/main/res/layout/item_post_image.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#8FFF"
@@ -83,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentTop="true"
-        android:background="@color/colorPrimary"
+        android:background="@color/gold_med"
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toTopOf="@id/layout"/>
 
@@ -91,7 +90,6 @@
         android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imagePost"
         android:paddingTop="8dp">
 
@@ -132,7 +130,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/commentLayout"
-        app:layout_constraintTop_toBottomOf="@id/layout" />
+        app:layout_constraintTop_toBottomOf="@id/layout"
+        android:scrollbars="vertical"/>
 
     <Button
         android:id="@+id/addComBtn"
