--- a/app/src/main/res/layout/activity_sign_up_details.xml
+++ b/app/src/main/res/layout/activity_sign_up_details.xml
@@ -299,4 +299,23 @@
         app:layout_constraintBottom_toTopOf="@id/button5"
         app:srcCompat="@drawable/back_btn" />
 
+    <FrameLayout
+        android:id="@+id/lay"
+        android:layout_width="201dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@android:color/transparent"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        app:layout_constraintBottom_toBottomOf="@+id/birthDate"
+        app:layout_constraintEnd_toEndOf="@+id/birthDate"
+        app:layout_constraintStart_toStartOf="@+id/birthDate"
+        app:layout_constraintTop_toTopOf="@+id/birthDate">
+
+    </FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
